--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
     }
     window.addEventListener("resize", resizeCanvas);
 
-    // Immagini
+     // Immagini
     const bgImage = new Image();
-    bgImage.src = "Sfondo.jpg";
+    bgImage.src = "Gioco Deloitte/Sfondo.jpg";
 
     const treeImage = new Image();
-    treeImage.src = "Albero-SMO.png";
+    treeImage.src = "Gioco Deloitte/Albero-SMO.png";
 
     const bookImage = new Image();
-    bookImage.src = "Libro.png";
+    bookImage.src = "Gioco Deloitte/Libro.png";
 
     const playerImage = new Image();
-    playerImage.src = "Personaggio.png";
+    playerImage.src = "Gioco Deloitte/Personaggio.png";
 
     const goalImage = new Image();
-    goalImage.src = "Traguardo.png";
+    goalImage.src = "Gioco Deloitte/Traguardo.png";
 
     // Player
     let player = {
